assets/css/styles.css
.leftside {
  margin:0px;
  padding-left:15px;
  padding-right:0px;
  flex-shrink:0;
  max-width:427px;
  min-width:427px;
}

.rightside {
  margin:0px;
  padding:0px;
  max-width:600px;
  min-width:600px;
  /*flex-shrink:0;*/
  flex:0 0 600px;
}

.dropdown {
  max-width:15rem;
}

.accessory-dropdown {
  margin-left:-15px;
}

.weapon-dropdown {
  margin-left:-5px;
}

.ascension-row {
  margin-bottom:-5px;
}

.ascension-column {
  padding-bottom:0px;
}

.col-lg-4.weapon-column {
  max-width:28%;
}

.col.ascension-column {
  max-width:35%;
}

.col-lg-5.accessory-column {
  max-width:39%;
}

.result-box {
  margin-bottom:0px;
}

.fire {
  color:red;
  text-shadow:1px 1px 10px white, 1px 1px 10px red;
}

.ice {
  color:blue;
  text-shadow:1px 1px 10px white, 1px 1px 10px blue;
}

.lightning {
  color:yellow;
  text-shadow:1px 1px 10px white, 1px 1px 10px yellow;
}

.dark {
  color:black;
  text-shadow:1px 1px 10px white, 1px 1px 10px black;
}

.shot {
  color:green;
  text-shadow:1px 1px 10px white, 1px 1px 10px green;
}

.light {
  color:white;
  text-shadow:1px 1px 10px white, 1px 1px 10px white;
}

.non-elemental {
  color:gray;
  text-shadow:1px 1px 10px white, 1px 1px 10px gray;
}

.row.divider {
  height:1.5rem;
  color:grey;
}

.damage {
  font-size:small;
}

